--- a/Dark/index.html
+++ b/Dark/index.html
@@ -644,13 +644,16 @@
                 <h4>Cernucci</h4>
                 <div class="row">
                   <div class="col-10 ">
-                  <p>We partnered with Cernucci to help redesign their website to increase conversions by 30%</p>
-                
-                </div>
-                <div class="col-2 "><a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox preview-link" title="Cernucci <br> Cernucci is an urban jewelry brand that is inspired by London's hip-hop fashion trends. The company wants to give its customers a chance to express themselves through their fashion choices."><i class="fas fa-plus"></i></a>
-                <a href="https://www.cernucci.com" class="details-link" title="More Details"><i
-                    class="fas fa-paperclip"></i></a></div>
+                    <p>We partnered with Cernucci to help redesign their website to increase conversions by 30%</p>
+
+                  </div>
+                  <div class="col-2 "><a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery"
+                      class="portfolio-lightbox preview-link"
+                      title="Cernucci <br> Cernucci is an urban jewelry brand that is inspired by London's hip-hop fashion trends. The company wants to give its customers a chance to express themselves through their fashion choices."><i
+                        class="fas fa-plus"></i></a>
+                    <a href="https://www.cernucci.com" class="details-link" title="More Details"><i
+                        class="fas fa-paperclip"></i></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -704,12 +707,16 @@
                 <h4>ARM Creative</h4>
                 <div class="row">
                   <div class="col-10 ">
-                  <p>Color is more than a hue. Discover how color arrangements and pairings play with light, stimulate the senses and tell a design strongly.</p>
+                    <p>Color is more than a hue. Discover how color arrangements and pairings play with light, stimulate
+                      the senses and tell a design strongly.</p>
                   </div>
-                <div class="col-2 "><a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox preview-link" title="ARM Creative <br> ARM Creative is a company that creates marketing campaigns. They use a mixture of video and static images to offer creative production strategy to their clients."><i class="fas fa-plus"></i></a>
-                <a href="https://arm-creative.com/" class="details-link" title="More Details"><i
-                    class="fas fa-paperclip"></i></a></div>
+                  <div class="col-2 "><a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery"
+                      class="portfolio-lightbox preview-link"
+                      title="ARM Creative <br> ARM Creative is a company that creates marketing campaigns. They use a mixture of video and static images to offer creative production strategy to their clients."><i
+                        class="fas fa-plus"></i></a>
+                    <a href="https://arm-creative.com/" class="details-link" title="More Details"><i
+                        class="fas fa-paperclip"></i></a>
+                  </div>
                 </div>
               </div>
             </div>
@@ -788,76 +795,143 @@
           <div class="section-title wow fadeInDown animated" data-wow-duration="2s">
             <span>Pricing</span>
             <h2>Pricing</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+            <p>As a leading website development company, we partner with many providers and take their services to
+              nurture our client base. We use different hosting vendors to save the web hosting cost and host our
+              clients where we think their website will work better as per their selected website development package
+            </p>
           </div>
 
           <div class="row">
 
             <div class="col-lg-3 col-sm-6 wow rollIn animated" data-wow-duration="2s">
               <div class="box">
-                <h3>Free</h3>
-                <h4><sup>$</sup>0<span> / month</span></h4>
+                <h3>STARTUP <br> WEBSITE DEVELOPMENT PACKAGE </h3>
+                <h4><sup>$</sup>800<span> <br>
+                    EXCLUSIVE OF ALL TAXES</span></h4>
                 <ul>
-                  <li>Lorem, ipsum.</li>
-                  <li>Lorem, ipsum dolor.</li>
-                  <li class="na">Lorem ipsum dolor sit.</li>
-                  <li class="na">Lorem, ipsum.</li>
-                  <li class="na">Lorem, ipsum.</li>
+                  <li>10-25 Static Pages</li>
+                  <li>Custom Logo & Homepage</li>
+                  <li>Hosting Free For 1st Year</li>
+                  <li>1 Email- 500 MB Quota</li>
+                  <li>Mobile Responsive</li>
+                  <li>Click to Call/Email, Testimonials</li>
+                  <li>Social Profile Link,Slider</li>
+                  <li>Gallery Section, Chat Feature</li>
+                  <li>1 Year Technical support</li>
+                  <li>Website with 90+ Google Score</li>
+                  <li>Timeline: 20 Days</li>
+
+
+                  <li class="na">Online payment gateway</li>
+                  <li class="na">Basic SEO</li>
+
+                  <li class="na">WhatsApp Chat Integration</li>
+                  <li class="na">Contact Form</li>
+                  <li class="na">Revisions</li>
+                  <li class="na"> Admin Panel</li>
+                  <li class="na">Social Media Profiles Integration</li>
+                  <li class="na">Product selling Feature</li>
                 </ul>
                 <div class="btn-wrap">
-                  <a href="#" class="btn-buy">Buy Now</a>
+                  <a href="https://wa.me/916394730782?text=Hello%0AI%27m%20interested%20in%20your%20Startup%20website%20development%20package.%0AShare%20some%20more%20details%20with%20me." class="btn-buy">Buy Now</a>
                 </div>
               </div>
             </div>
 
             <div class="col-lg-3 col-sm-6 wow rollIn animated" data-wow-duration="3s">
               <div class="box featured">
-                <h3>Business</h3>
-                <h4><sup>$</sup>19<span> / month</span></h4>
+                <h3>SMALL BUSINESS WEBSITE DEVELOPMENT PACKAGE</h3>
+                <h4><sup>$</sup>1150<span><br>EXCLUSIVE OF ALL TAXES</span></h4>
                 <ul>
-                  <li>Lorem, ipsum.</li>
-                  <li>Lorem, ipsum dolor.</li>
-                  <li>Lorem ipsum dolor sit.</li>
-                  <li class="na">Lorem, ipsum.</li>
-                  <li class="na">Lorem, ipsum.</li>
+                  <li>Unlimited Dynamic Pages</li>
+                  <li>Custom Logo & Homepage</li>
+                  <li>Hosting Free For 1st Year</li>
+                  <li>2 Email- 500 MB Quota Each</li>
+                  <li>Mobile Responsive</li>
+                  <li>Click to Call/Email, Testimonials</li>
+                  <li>Social Profile Link, Slider</li>
+                  <li>Gallery Section, Chat Feature</li>
+                  <li>1 Year Technical support</li>
+                  <li>Website with 90+ Google Score</li>
+                  <li>Basic SEO 3 Months</li>
+                  <li>User Friendly Admin Panel</li>
+                  <li>1 Contact Form</li>
+
+                  <li>Revisions: 1</li>
+                  <li>Timeline: 25 Days</li>
+                  <li class="na">Online payment gateway</li>
+                  <li class="na">WhatsApp Chat Integration</li>
+                  <li class="na">Social Media Profiles Integration</li>
+                  <li class="na">Product selling Feature</li>
+
                 </ul>
                 <div class="btn-wrap">
-                  <a href="#" class="btn-buy">Buy Now</a>
+                  <a href="https://wa.me/916394730782?text=Hello%0AI%27m%20interested%20in%20your%20Small%20Business%20Website%20Development%20Package.%0AShare%20some%20more%20details%20with%20me." class="btn-buy">Buy Now</a>
                 </div>
               </div>
             </div>
 
             <div class="col-lg-3 col-sm-6  wow rollIn animated" data-wow-duration="4s">
               <div class="box">
-                <h3>Developer</h3>
-                <h4><sup>$</sup>29<span> / month</span></h4>
+                <h3>ECOMMERCE <br> WEBSITE DEVELOPMENT PACKAGE</h3>
+                <h4><sup>$</sup>1450<span><br>EXCLUSIVE OF ALL TAXES</span></h4>
                 <ul>
-                  <li>Lorem, ipsum.</li>
-                  <li>Lorem, ipsum dolor.</li>
-                  <li>Lorem ipsum dolor sit.</li>
-                  <li>Lorem, ipsum.</li>
-                  <li class="na">Lorem, ipsum.</li>
+                  <li>Unlimited Dynamic Pages</li>
+                  <li>Custom Logo & Homepage</li>
+                  <li>Hosting Free For 1st Year</li>
+                  <li>5 Email- 500 MB Quota Each</li>
+                  <li>Mobile Responsive</li>
+                  <li>Click to Call/Email, Testimonials</li>
+                  <li>Social Profile Link, Slider</li>
+                  <li>Gallery Section, Chat Feature</li>
+                  <li>1 Year Technical support</li>
+                  <li>Website with 90+ Google Score</li>
+                  <li>Basic SEO 3 Months</li>
+                  <li>User Friendly Admin Panel</li>
+                  <li>3 Contact Form</li>
+                  <li>Revisions: 3</li>
+                  <li>Pre-added 50 Products</li>
+                  <li>Online payment gateway</li>
+                  <li>WhatsApp Chat Integration</li>
+                  <li>Social Media Profiles Integration</li>
+
+                  <li>Timeline: 30 Days</li>
+
+
                 </ul>
                 <div class="btn-wrap">
-                  <a href="#" class="btn-buy">Buy Now</a>
+                  <a href="https://wa.me/916394730782?text=Hello%0AI%27m%20interested%20in%20your%20Ecommerce%20website%20development%20package.%0AShare%20some%20more%20details%20with%20me." class="btn-buy">Buy Now</a>
                 </div>
               </div>
             </div>
 
             <div class="col-lg-3 col-sm-6 wow rollIn animated" data-wow-duration="5s">
               <div class="box">
-                <span class="advanced">Advanced</span>
-                <h3>Ultimate</h3>
-                <h4><sup>$</sup>49<span> / month</span></h4>
+                <span class="advanced">For Branding</span>
+                <h3>ENTERPRISE <br> SMO Package</h3>
+                <h4><sup>$</sup>250<span> / month <br>EXCLUSIVE OF ALL TAXES</span></h4>
                 <ul>
-                  <li>Lorem, ipsum.</li>
-                  <li>Lorem, ipsum dolor.</li>
-                  <li>Lorem ipsum dolor sit.</li>
-                  <li>Lorem, ipsum.</li>
-                  <li>Lorem, ipsum.</li>
+                  <li>15 Social media Post Creation</li>
+                  <li>3 Free Ads</li>
+                  <li>4 Social Account Management</li>
+                  <li>Facebook Business Manager Set-Up</li>
+                  <li>Facebook Remarketing</li>
+                  <li>Instagram Audience Research</li>
+                  <li>LinkedIn Manager Account Set-up</li>
+                  <li>Skippable YouTube Ads</li>
+                  <li>Non-Skippable YouTube Ads</li>
+                  <li>Bumper Ads</li>
+                  <li>Trending Meme Ads</li>
+                  <li>Custom Audience Creation</li>
+                  <li>Website Handling</li>
+                  <li>SEO</li>
+                  <li>Website Optimization</li>
+                  <li>Influencer Marketing</li>
+                  <li>Monthly Report</li>
                 </ul>
                 <div class="btn-wrap">
-                  <a href="#" class="btn-buy">Buy Now</a>
+                  <a href="https://wa.me/916394730782?text=Hello%0AI%27m%20interested%20in%20your%20Enterprise%20SMO%20package.%0AShare%20some%20more%20details%20with%20me." class="btn-buy">Buy Now</a>
                 </div>
               </div>
             </div>
@@ -953,9 +1027,10 @@
         <div class="container wow fadeInLeftBig animated" data-wow-duration="1.5s">
 
           <div class="section-title wow fadeInDownBig animated" data-wow-duration="2s">
-            <span>Contact Me</span>
-            <h2>Contact Me</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            <span>Contact Us</span>
+            <h2>Contact Us</h2>
+            <p>We'd love to hear from you! <br>
+              Brief us your requirements below, and let's connect.</p>
           </div>
           <div class="row">
             <div class="col-lg-6">
@@ -968,29 +1043,33 @@
                       <a href="javascript:void(0)" class="twitter"><i class="fab fa-twitter"></i></a>
                       <a href="javascript:void(0)" class="facebook"><i class="fab fa-facebook"></i></a>
                       <a href="javascript:void(0)" class="instagram"><i class="fab fa-instagram"></i></a>
-                      <a href="javascript:void(0)" class="google-plus"><i class="fab fa-google"></i></a>
+                      <a href="https://wa.me/916394730782" class="whatsapp"><i class="fab fa-whatsapp"></i></a>
                       <a href="javascript:void(0)" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
                     </div>
                   </div>
                 </div>
                 <div class="col-md-6 wow bounceInLeft animated" data-wow-duration="2s">
+                  <a href="mailto:info.indian.developers@gmail.com">
                   <div class="info-box">
                     <i class="fas fa-envelope"></i>
-                    <h3>Email Me</h3>
-                    <p>contact@example.com</p>
+                    <h3>Email Us</h3>
+                    <p>info.indian.developers@gmail.com</p>
                   </div>
+                </a>
                 </div>
                 <div class="col-md-6 wow bounceInRight animated" data-wow-duration="2s">
+                  <a href="tel:+916394730782">
                   <div class="info-box">
                     <i class="fas fa-phone-alt"></i>
-                    <h3>Call Me</h3>
-                    <p>+123456789</p>
+                    <h3>Call Us</h3>
+                    <p>+91 639 473 0782</p>
                   </div>
+                </a>
                 </div>
               </div>
             </div>
             <div class="col-lg-6 wow bounceIn animated" data-wow-duration="2s">
-              <form class="email-form">
+              <form class="email-form" action="https://formspree.io/f/mgedzbnw" method="POST">
                 <div class="row">
                   <div class="col-md-6 form-group">
                     <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -1010,6 +1089,7 @@
               </form>
             </div>
           </div>
+          
         </div>
       </section><!-- End Contact Me Section -->
       <section>
@@ -1018,7 +1098,7 @@
             <div class="col-12">
               <div class="map">
                 <iframe
-                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2480.4419632115837!2d-0.31545398402676533!3d51.56013091466708!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487613b3810101c3%3A0x62846e204598603f!2sWembley%2C%20UK!5e0!3m2!1sen!2sin!4v1646889711501!5m2!1sen!2sin"
+                  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3557.338779788778!2d80.94465801436608!3d26.92447246606691!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399957ab92617425%3A0x8adbdbf0f9d9aad!2s645%2F55%2C%20Janki%20Vihar%20Colony%2C%20Jankipuram%2C%20Lucknow%2C%20Uttar%20Pradesh%20226021!5e0!3m2!1sen!2sin!4v1647948412369!5m2!1sen!2sin"
                   style="border:0;" allowfullscreen="" loading="lazy"></iframe>
               </div>
             </div>
@@ -1028,9 +1108,11 @@
       <!-- ======= Footer ======= -->
       <footer id="footer">
         <div class="container wow flipInX animated" data-wow-duration="2s">
-          <h3>Alex Smith</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi soluta perferendis maiores ullam beatae
-            inventore!</p>
+          <h3>Indian Web Agency</h3>
+          <h4>Let's talk about what we can build together!!! </h4>
+          <p>
+            <br>
+            Whatever may be your requirement - be it a simple website design, a complex data driven web application development, an ecommerce website, a native or cross platform mobile app development, a logo and brand identity design, a video production or a full fledged digital marketing campaign - we have a solution for you.</p>
           <div class="social-links">
             <a href="javascript:void(0)" class="twitter"><i class="fab fa-twitter"></i></a>
             <a href="javascript:void(0)" class="facebook"><i class="fab fa-facebook-f"></i></a>
@@ -1039,10 +1121,7 @@
             <a href="javascript:void(0)" class="linkedin"><i class="fab fa-linkedin-in"></i></a>
           </div>
           <div class="copyright">
-            Copyright© &nbsp;
-            <script>
-              document.write(new Date().getFullYear())
-            </script><a> Avs Technolabs </a>&nbsp;&nbsp;<i class="fa fa-heart wow pulse" data-wow-iteration="infinite"
+            Copyright ©&nbsp;<script>document.write(new Date().getFullYear())</script> <a> I. W. A.</a>&nbsp;&nbsp;<i class="fa fa-heart wow pulse" data-wow-iteration="infinite"
               data-wow-duration="500ms"></i></i>&nbsp;&nbsp;All rigths reserved
           </div>
         </div>
