--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
           <li><a class="nav-link scrollto" href="#about"><i class="fas fa-user-alt"></i>About</a></li>
           <li><a class="nav-link scrollto" href="#services"><i class="fas fa-poll"></i>Services</a></li>
           <li><a class="nav-link scrollto" href="#portfolio"> <i class="fas fa-briefcase"></i>Portfolio</a></li>
-          <li><a class="nav-link scrollto" href="#blog"><i class="fas fa-file"></i>Blog</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#blog"><i class="fas fa-file"></i>Blog</a></li> -->
           <li><a class="nav-link scrollto" href="#contact"><i class="fas fa-envelope"></i>Contact</a></li>
         </ul>
         <i class="fas fa-bars mobile-nav-toggle"></i>
